# public/swagger.json
@@ -77,6 +77,22 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"ResetPasswordDto": {
+				"properties": {
+					"token": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"token",
+					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {
@@ -340,6 +356,7 @@
 						}
 					}
 				},
+				"description": "Send a token to the email which will allow you to reset the password of the account",
 				"tags": [
 					"User"
 				],
@@ -351,6 +368,47 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/IUserInputEmail"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/auth/reset-password": {
+			"post": {
+				"operationId": "ResetPassword",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"description": "Password reset token received in the email from the forgot password step",
+				"tags": [
+					"User"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ResetPasswordDto"
 							}
 						}
 					}
